# scf_lib

./: .gitignore  main.py  pyproject.toml
scf/: __init__.py  gaussian_chain.py  lattice.py
tests/: test_gaussian_chain.py
